--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,7 @@ path = "examples/hyper.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-http-body-util = "0.1"
-hyper = { version = "1", features = ["full"] }
-hyper-util = { version = "0.1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
 structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
 
