--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = {  version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 serde_qs = "0.12.0"
+serde_with_macros = "3.6.0"
 structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
 
