--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "examples/bot.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+mockito = "1.2.0"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = {  version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
