--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -17,7 +17,7 @@ jobs:
   # https://twitter.com/mycoliza/status/1571295690063753218
   nightly:
     runs-on: ubuntu-latest
-    name: ubuntu / nightly
+    name: ubuntu | nightly
     steps:
       - uses: actions/checkout@v4
         with:
@@ -30,14 +30,14 @@ jobs:
       - name: cargo test --locked
         run: cargo test --locked --all-features --all-targets
   # https://twitter.com/alcuadrado/status/1571291687837732873
-  update:
+  updated:
     # This action checks that updating the dependencies of this crate to the latest available that
     # satisfy the versions in Cargo.toml does not break this crate. This is important as consumers
     # of this crate will generally use the latest available crates. This is subject to the standard
     # Cargo semver rules (i.e cargo does not update to a new major version unless explicitly told
     # to).
     runs-on: ubuntu-latest
-    name: ubuntu / beta / updated
+    name: ubuntu | beta | updated
     # There's no point running this if no Cargo.lock was checked in in the first place, since we'd
     # just redo what happened in the regular test job. Unfortunately, hashFiles only works in if on
     # steps, so we repeat it.
