--- a/.github/workflows/codecov_report.yml
+++ b/.github/workflows/codecov_report.yml
@@ -29,11 +29,12 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+name: Coverage
 
 jobs:
   coverage_report:
     runs-on: ubuntu-latest
-    name: Ubuntu / Stable / Coverage report
+    name: Ubuntu / Stable / Report
     steps:
       - uses: actions/checkout@v4
         with:
