--- a/.github/workflows/codecov_report.yml
+++ b/.github/workflows/codecov_report.yml
@@ -30,12 +30,12 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: Coverage
+name: 'coverage'
 
 jobs:
   coverage_report:
     runs-on: ubuntu-latest
-    name: Ubuntu / Stable / Report
+    name: ubuntu / stable / report
     steps:
       - uses: actions/checkout@v4
         with:
