--- a/.github/workflows/rolling.yml
+++ b/.github/workflows/rolling.yml
@@ -13,7 +13,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: Rolling
+name: 'Rolling  '
 
 jobs:
   nightly:
