--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -14,7 +14,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: check
+name: lints
 
 jobs:
   fmt:
