--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -40,7 +40,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        toolchain: [stable, beta]
+        toolchain: [stable, beta, nightly]
     steps:
       - uses: actions/checkout@v4
         with:
