--- a/.github/workflows/codecov_report.yml
+++ b/.github/workflows/codecov_report.yml
@@ -35,7 +35,7 @@ name: coverage
 jobs:
   coverage_report:
     runs-on: ubuntu-latest
-    name: ubuntu / stable / report
+    name: stable / report
     steps:
       - uses: actions/checkout@v4
         with:
