--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -15,7 +15,7 @@ name: features
 jobs:
   hack:
     runs-on: ubuntu-latest
-    name: ubuntu / stable / features
+    name: stable / features
     steps:
       - uses: actions/checkout@v4
         with:
