--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 cargo-edit = "0.12.2"
+
+[target.'cfg(any())'.dependencies]
+openssl = { version = "0.10.55", optional = true }
