--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_qs = "0.12.0"
 serde_with_macros = "3.6.0"
 structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
+openssl = { version = "0.10.55", optional = true }
 
 [dev-dependencies]
 cargo-edit = "0.12.2"
