--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ serde_qs = "0.12.0"
 serde_with_macros = "3.6.0"
 structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
+
+# [minimal]
 openssl = { version = "0.10.55", optional = true }
-
-[dev-dependencies]
-cargo-edit = "0.12.2"
-
+libgit2-sys = {  version = "^0.16.2", optional = true }
