--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ tokio = { version = "1", features = ["full"] }
 # [minimal]
 openssl = { version = "0.10.55", optional = true }
 libgit2-sys = {  version = "^0.16.2", optional = true }
+cargo-minimal-versions = "0.1.25"
