--- a/.github/workflows/codecov_report.yml
+++ b/.github/workflows/codecov_report.yml
@@ -30,7 +30,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: coverage
+name: 'coverage'
 
 jobs:
   coverage_report:
