--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -10,7 +10,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: features
+name: 'features'
 
 jobs:
   hack:
