--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -10,7 +10,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: msrv
+name: 'msrv    '
 
 jobs:
   msrv:
