--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_with_macros = "3.6.0"
 structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
 
-
-[dev-dependencies]
-cargo-edit = "0.12.2"
+# [minimal]
+openssl = { version = "0.10.55", optional = true }
+libgit2-sys = {  version = "^0.16.2", optional = true }
+cargo-minimal-versions = "0.1.25"
