--- a/.github/workflows/rolling.yml
+++ b/.github/workflows/rolling.yml
@@ -3,18 +3,21 @@
 # information about how the concurrency cancellation and workflow triggering works
 permissions:
   contents: read
+
 on:
   push:
     branches: [master]
   pull_request:
   schedule:
     - cron:  '7 7 * * *'
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
-name: rolling
+
+name: 'rolling '
+
 jobs:
-  # https://twitter.com/mycoliza/status/1571295690063753218
   nightly:
     runs-on: ubuntu-latest
     name: ubuntu / nightly
@@ -29,15 +32,14 @@ jobs:
         run: cargo generate-lockfile
       - name: cargo test --locked
         run: cargo test --locked --all-features --all-targets
-  # https://twitter.com/alcuadrado/status/1571291687837732873
-  update:
+  updates:
     # This action checks that updating the dependencies of this crate to the latest available that
     # satisfy the versions in Cargo.toml does not break this crate. This is important as consumers
     # of this crate will generally use the latest available crates. This is subject to the standard
     # Cargo semver rules (i.e cargo does not update to a new major version unless explicitly told
     # to).
     runs-on: ubuntu-latest
-    name: ubuntu / beta / updated
+    name: ubuntu / beta
     # There's no point running this if no Cargo.lock was checked in in the first place, since we'd
     # just redo what happened in the regular test job. Unfortunately, hashFiles only works in if on
     # steps, so we repeat it.
