--- a/.github/workflows/rolling.yml
+++ b/.github/workflows/rolling.yml
@@ -15,7 +15,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-name: 'rolling '
+name: rolling
 
 jobs:
   nightly:
