--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ license = "MIT"
 talegram-version = "7.0"
 
 [[example]]
-name = "bot"
-path = "examples/bot.rs"
+name = "async-playground"
+path = "examples/async/playground.rs"
 
 [[example]]
-name = "playground"
-path = "examples/playground.rs"
+name = "sync-playground"
+path = "examples/sync/playground.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
