--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ tokio = { version = "1", features = ["full"] }
 openssl = { version = "0.10.55", optional = true }
 libgit2-sys = { version = "^0.16.2", optional = true }
 cargo-minimal-versions = { version = "0.1.25", optional = true }
+async-trait = "0.1.77"
