--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ edition = "2021"
 rust-version = "1.70.0"
 version = "0.0.1"
 license = "MIT"
+description = "Telegram bots api simple rust wrapper, and no more."
+documentation = "https://docs.rs/telegram_bots_api"
+github = "https://github.com/khusnetdinov/telegram_bots_api"
+keywords = ["telegram", "bots", "api"]
 
 [package.metadata]
 talegram-version = "7.0"
