--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [package]
 name = "telegram_bots_api"
 edition = "2021"
@@ -14,30 +16,26 @@ authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]
 talegram-version = "7.0"
 
 [features]
-all = ["async", "sync"]
 nightly = []
-default = []
-async = []
-sync = []
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+default = ['async']
+all = ["async", "sync"]
+async = ["dep:async-trait", "dep:tokio", "dep:reqwest"]
+sync = ["reqwest/blocking"]
 
 [dependencies]
+structopt = "0.3.26"
 mockito = "1.2.0"
-reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde = {  version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 serde_qs = "0.12.0"
 serde_with_macros = "3.6.0"
-structopt = "0.3.26"
-
-async-trait = "0.1.77"
-tokio = { version = "1", features = ["full"] }
-
-# [minimal]
+reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
+async-trait = { version = "0.1.77", optional = true }
+tokio = { version = "1", features = ["full"], optional = true }
+# cargo-minimal-versions
+cargo-minimal-versions = { version = "0.1.25", optional = true }
 openssl = { version = "0.10.55", optional = true }
 libgit2-sys = { version = "^0.16.2", optional = true }
-cargo-minimal-versions = { version = "0.1.25", optional = true }
 mio = "0.8.11"
 
 [[example]]
