--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ talegram-version = "7.0"
 nightly = []
 default = ['async']
 all = ["async", "sync"]
-async = ["dep:async-trait", "dep:tokio", "dep:reqwest"]
-sync = ["reqwest/blocking"]
+async = ["dep:async-trait", "dep:tokio"]
+sync = []
 
 [dependencies]
 structopt = "0.3.26"
@@ -29,7 +29,7 @@ serde = {  version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 serde_qs = "0.12.0"
 serde_with_macros = "3.6.0"
-reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
+reqwest = { version = "0.11", features = ["json", "blocking"] }
 async-trait = { version = "0.1.77", optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
 # cargo-minimal-versions
