--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ version = "0.0.1"
 license = "MIT"
 description = "Telegram bots api simple rust wrapper, and no more."
 documentation = "https://docs.rs/telegram_bots_api"
-github = "https://github.com/khusnetdinov/telegram_bots_api"
+homepage = "https://github.com/khusnetdinov/telegram_bots_api"
+repository = "https://github.com/khusnetdinov/telegram_bots_api"
 keywords = ["telegram", "bots", "api"]
 authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]
 
