--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@
 name = "telegram_bots_api"
 edition = "2021"
 rust-version = "1.70.0"
-version = "0.0.1"
+version = "0.0.2"
 license = "MIT"
 description = "Telegram bots api simple rust wrapper, and no more."
 documentation = "https://docs.rs/telegram_bots_api"
-github = "https://github.com/khusnetdinov/telegram_bots_api"
+homepage = "https://github.com/khusnetdinov/telegram_bots_api"
+repository = "https://github.com/khusnetdinov/telegram_bots_api"
 keywords = ["telegram", "bots", "api"]
 authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]
 
