--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,11 @@ serde = {  version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 serde_qs = "0.12.0"
 serde_with_macros = "3.6.0"
-reqwest = { version = "0.11", features = ["json", "blocking"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }
 async-trait = { version = "0.1.77", optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
+tokio-util = { version = "0.7.3", features = ["codec"] }
+
 # cargo-minimal-versions
 cargo-minimal-versions = { version = "0.1.25", optional = true }
 openssl = { version = "0.10.55", optional = true }
